# FUTURISYS

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/model/: model_HR_prediction_TECHNOVA.joblib
app/tests/: config.py  test_api.py  test_sanity.py
