[project]
name = "futurisys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.119.1",
    "httpx>=0.28.1",
    "imblearn>=0.0",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
]
